--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h1>Today's foods</h1>
 			<input id="new-food" placeholder="What are you eating?" autofocus>
 		</header>
-		<div id="searchresults"></div>
+		<div><ul id="searchresults"></ul></div>
 		<section id="main">
 			<input id="toggle-all" type="checkbox">
 			<label for="toggle-all">Mark all for deletion</label>
