--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Healthy Eating App</title>
+	<link rel="stylesheet" href="assets/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="assets/index.css">
 </head>
 <body>
@@ -12,7 +14,7 @@
 			<h1>Today's foods</h1>
 			<input id="new-food" placeholder="What are you eating?" autofocus>
 		</header>
-		<div><ul id="searchresults"></ul></div>
+		<div><ul id="searchresults" class="list-group"></ul></div>
 		<section id="main">
 			<input id="toggle-all" type="checkbox">
 			<label for="toggle-all">Mark all for deletion</label>
@@ -35,6 +37,7 @@
 	<script src="js/lib/underscore-min.js"></script>
 	<script src="js/lib/backbone-min.js"></script>
 	<script src="js/lib/backbone.localStorage-min.js"></script>
+	<script src="js/lib/bootstrap.min.js"></script>
 	<script src="js/models/food.js"></script>
 	<script src="js/collections/foods.js"></script>
 	<script src="js/views/foods.js"></script>
