--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Healthy Eating App</title>
+	<title>Daily Fitness Calorie Counter</title>
 	<link href='https://fonts.googleapis.com/css?family=Marck+Script' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="assets/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/bootstrap-theme.min.css">
@@ -14,25 +14,33 @@
 	<section id="healthApp">
 		<header id="header">
 			<h1>Daily Fitness Calorie Counter</h1>
+			<!-- Input box for the food to search for, uses a Bootstrap class -->
 			<input id="new-food" class="form-control" placeholder="What are you eating?" autofocus>
 		</header>
-		<div><ul id="searchresults" class="list-group"></ul></div>
+		<div>
+			<!-- div to contain the results of the search, will not be displayed until necessary -->
+			<ul id="searchresults" class="list-group"></ul>
+		</div>
 		<section id="main">
 			<div id="list-header" class="row">
 				<span id="eaten" class="col-md-6">
 					Eaten today:
 				</span>
 				<span id="mark-all" class="col-md-6">
+					<!-- Gives the option to select all for deletion -->
 					<input id="toggle-all" type="checkbox">
 					<label for="toggle-all">Mark all for deletion</label>
 				</span>
 			</div>
 			<div class="row">
+				<!-- List where the selected foods will be added -->
 				<ul id="foods" class="list-group"></ul>
 			</div>
 		</section>
+		<!-- The total calorie count and delete button will be added in the footer -->
 		<footer id="footer" class="row"></footer>
 	</section>
+	<!-- Template backbone will use to list the items -->
 	<script type="text/template" id="item-template">
 		<div class="list-group-item">
 			<input class="toggle" type="checkbox" <%= checked ? 'checked' : '' %>>
@@ -40,6 +48,7 @@
 			<span class="glyphicon glyphicon-remove" aria-hidden="true"></button>
 		</div>
 	</script>
+	<!-- Template backbone will use to display the delete button and the calorie count -->
 	<script type="text/template" id="calorielist-template">
 		<button class="btn btn-default" id="delete-checked">Delete checked foods </button>
 		<div class="row" id="caloriecount">
@@ -55,8 +64,6 @@
 	<script src="js/collections/foods.js"></script>
 	<script src="js/views/foods.js"></script>
 	<script src="js/views/app.js"></script>
-	<!--<script src="js/routers/router.js"></script>-->
 	<script src="js/app.js"></script>
-
 </body>
 </html>
