Fixed the search box not resetting

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div class="list-group-item">
 			<input class="toggle" type="checkbox" <%= checked ? 'checked' : '' %>>
 			<label><%= name %> - <%= calories %> calories - <%= quantity %></label>
-			<span class="glyphicon glyphicon-remove" aria-hidden="true"></button>
+			<span class="glyphicon glyphicon-remove" aria-hidden="true">
 		</div>
 	</script>
 	<!-- Template backbone will use to display the delete button and the calorie count -->
