--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 		</div>
 		<section id="main">
 			<div id="list-header" class="row">
-				<span id="eaten" class="col-md-6">
+				<h2 id="eaten" class="col-md-6">
 					Eaten today:
-				</span>
-				<span id="mark-all" class="col-md-6">
+				</h2>
+				<form id="mark-all" class="col-md-6">
 					<!-- Gives the option to select all for deletion -->
 					<input id="toggle-all" type="checkbox">
 					<label for="toggle-all">Mark all for deletion</label>
-				</span>
+				</form>
 			</div>
 			<div class="row">
 				<!-- List where the selected foods will be added -->
@@ -63,7 +63,7 @@
 	<script src="js/models/food.js"></script>
 	<script src="js/collections/foods.js"></script>
 	<script src="js/views/foods.js"></script>
-	<script src="js/views/app.js"></script>
+	<script src="js/views/app-view.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
